* Added get all user routes with documentation
